Added functionality for generating PDFs/html by using XSLT:FO and XSLT

--- a/BridgeCrossingWebApplication/WebContent/WEB-INF/jsp/css/crossing_stylesheet.css
+++ b/BridgeCrossingWebApplication/WebContent/WEB-INF/jsp/css/crossing_stylesheet.css
@@ -185,3 +185,27 @@
 	 color:red;
 	 display:inline-block;
 	}
+	
+	
+	
+	a#folink:link { 
+	color: black; 
+	background-color: #66CCCC;
+	text-decoration: none;
+	border: 2px solid black; 
+	
+	}
+	a#folink:visited { 
+	color: white; 
+	background-color: black;
+	text-decoration: none;
+	border: 2px solid white; 
+	
+	}
+	a#folink:hover {
+	color: black; 
+	background-color: white;
+	text-decoration: none;
+	border: 2px solid black; 
+	
+	} 
